transform the unit test into sharable scenario between application and composition root